--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,24 +1,29 @@
 .cover__link {
-    display: block;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    min-height: 740px;  
-    text-decoration: none;
-    color: white;
-    /*z-index: 1;*/
+  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  min-height: 740px;  
+  text-decoration: none;
+  color: white;
+}
+
+@media screen and (max-width: 1279px) {
+  .cover__link {
+    min-height: 640px;
+  }
 }
 
 @media screen and (max-width: 1023px) {
-    .cover__link {
-      min-height: 480px;
-    }
+  .cover__link {
+    min-height: 480px;
   }
-  
+}
+
 @media screen and (max-width: 767px) {
-      .cover__link {
-        min-height: 200px;
-      }
+  .cover__link {
+    min-height: 200px;
   }
+}
