--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -4,7 +4,11 @@
   padding-top: 92px;   
 }
 
-
+@media screen and (max-width: 1279px) {
+  .cover {
+    min-height: 640px;
+  }
+}
 
 @media screen and (max-width: 1023px) {
   .cover {
@@ -13,9 +17,9 @@
 }
 
 @media screen and (max-width: 767px) {
-    .cover {
-      min-height: 200px;
-    }
+  .cover {
+    min-height: 200px;
+  }
 }
 
 @media screen and (max-width: 320px) {
