--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -5,13 +5,18 @@
   line-height: 58px;
   font-size: 54px;
   padding-top: 92px;
-  /*border: 1px solid blue;*/
+}
+
+@media screen and (max-width: 768px) {
+  .intro__title {
+    padding-top: 88px; 
+  }
 }
 
 @media screen and (max-width: 320px) {
   .intro__title {
     line-height: 35px;
     font-size: 32px;
-    padding-top: 88px; /*отступ до "верхняя полка"*/
+    padding-top: 64px; 
   }
 }
