--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -11,7 +11,20 @@
 
 @media screen and (max-width: 768px) {
   .lead__subtitle {
+    padding-bottom: 56px;  
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .lead__subtitle {
     line-height: 20px;
     font-size: 16px; 
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .lead__subtitle {
+    padding-top: 16px;
+    padding-bottom: 40px;  
   }
 }
