--- a/blocks/page/__section/_wider/page__section_wider.css
+++ b/blocks/page/__section/_wider/page__section_wider.css
@@ -1,16 +1,16 @@
-.page__section_wide {
+.page__section_wider {
   max-width: 984px;    
   padding: 0;  
 }
 
 @media screen and (max-width: 1024px) {
-  .page__section_wide {
+  .page__section_wider {
     max-width: 928px;    
   }
 }
 
 @media screen and (max-width: 768px) {
-  .page__section_wide {
-    max-width: 720px;    
+  .page__section_wider {
+    max-width: 100%;    
   }
 }
