--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,12 +1,12 @@
 .page {
-    background-color: #2A2C2F;
-    margin: 0 auto;
-    width: 100%;
-    color:white;
-    font-family: 'Inter', Arial, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-rendering: optimizeLegibility;
-    -webkit-text-size-adjust: 100%;
-/*добавить сюда сглаживания шрифтов и тд*/
+  background-color: #2A2C2F;
+  margin: 0 auto;
+  width: 100%;
+  min-width: 320px;
+  color:white;
+  font-family: 'Inter', Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  -webkit-text-size-adjust: 100%;
 }
