--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -3,21 +3,17 @@
   grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
   gap: 16px;  
   padding-bottom: 92px;
-  /*padding-left: 48px;
-  padding-right: 48px;*/  
 }
 
-@media screen and (max-width: 1023px) {
-    .photo-grid {
-        gap: 12px;  
-       /* padding-left: 24px;
-        padding-right: 24px;*/
-    }
+@media screen and (max-width: 768px) {
+  .photo-grid {
+    padding-bottom: 88px;
+  }
 }
 
-@media screen and (max-width: 767px) {
-    .photo-grid {
-       /* padding-left: 16px;
-        padding-right: 16px;*/
-    }
+@media screen and (max-width: 320px) {
+  .photo-grid {
+    padding-bottom: 64px;
+    gap: 12px;  
+  }
 }
