--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,22 +1,38 @@
 .place__paragraph {
-    margin: 0;
-    grid-column: 2;
-    font-weight: 400;
-    line-height: 29.34px;
-    font-size: 18px;
+  margin: 0;
+  grid-column: 2;
+  font-weight: 400;
+  line-height: 29.34px;
+  font-size: 18px;
+  padding-bottom: 25px;
+}
+
+.place__paragraph:last-of-type {
+  padding-bottom: 0;
 }
 
 @media screen and (max-width: 1023px){
-    .place__paragraph {
-      padding-left: 24px;
-      padding-right: 24px;
-    }
+  .place__paragraph {
+    padding-left: 24px;
+    padding-right: 24px;
   }
+}
+
+@media screen and (max-width: 768px){
+  .place__paragraph {
+    line-height: 26px;
+    font-size: 16px;
+  }        
+}
 
 @media screen and (max-width: 767px){
-    .place__paragraph {
-        grid-column: 1;
-        padding-left: 16px;
-        padding-right: 16px;
-    }        
+  .place__paragraph {
+    grid-column: 1;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 32px;
+  }
+  .place__paragraph:last-of-type {
+    padding-top: 0;
+  }        
 }
