--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -12,9 +12,15 @@
 }
 
 @media screen and (max-width: 767px){
-    .place__website {
-      padding-left: 16px;
-      padding-right: 16px;
-    }
+  .place__website {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
+
+@media screen and (max-width: 320px){
+  .place__website {
+    padding-bottom: 32px;
+  }
 }
 
