--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -8,6 +8,26 @@
   min-height: 740px;  
   text-decoration: none;
   color: white;
+  background-image: url(../../../images/cover-trains.jpg);
+  background-position: center;
+  background-size: cover;   
+  position: relative;    
+}
+
+.cover__link:after {
+  content: "";
+  background-color: #2A2C2F;
+  opacity: 0.3;
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: .7s linear;
+}
+
+.cover__link:hover::after {
+  opacity: 0.8;      
 }
 
 @media screen and (max-width: 1279px) {
