--- a/blocks/header/__list-link/header__list-link.css
+++ b/blocks/header/__list-link/header__list-link.css
@@ -1,4 +1,4 @@
-.header__lang-link {
+.header__list-link {
     text-decoration: none;
     color: white;
     font-weight: 400;
@@ -7,14 +7,14 @@
     padding-left: 18px;
 }
 
-.header__lang-link:hover {
+.header__list-link:hover {
     opacity: 0.8;
-   /* text-decoration: underline;  ?????*/
-
+    /* text-decoration: underline;  ?????*/
+    
 }
 
 @media screen and (max-width: 767px) {
-    .header__lang-link {
+    .header__list-link {
         font-size: 18px;
         line-height: 20px;
     }
