--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -11,6 +11,13 @@
   }
 }
 
+@media screen and (max-width: 768px){
+  .place__website {
+    padding-left: 0px;
+    padding-right: 16px;
+  }
+}
+
 @media screen and (max-width: 767px){
   .place__website {
     padding-left: 16px;
